# bootos

./: .gitignore  CMakeLists.txt  bootos.sln  bootos.vcxproj  config.ini  tags
Debug/: CL.read.1.tlog  CL.write.1.tlog  bootos.ilk  bootos_manifest.rc  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  vc110.idb
Win32/bootos/: bootos.sln
Win32/bootos/Debug/: bootos.ilk
Win32/bootos/bootos/: bootos.vcxproj  bootos.vcxproj.filters
Win32/bootos/bootos/Debug/: CL.read.1.tlog  CL.write.1.tlog  bootos.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
bootos/: bootos.vcxproj  bootos.vcxproj.filters  config.xml  tags
bootos/Debug/: CL.read.1.tlog  CL.write.1.tlog  bootos.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
bootos/config/: config.xml
bootos/lib/: libxml2.lib
bootos/src/: commander.cpp  common.cpp  config_reader.cpp  heartbeat.cpp  logger.cpp  main.cpp
bootos/src/include/: common.h  heartbeat.h  logger.h
lib/: lib_json.lib  libxml2.lib
src/: bootos_manager.cpp  commander.cpp  common.cpp  config_reader.cpp  heartbeat.cpp  logger.cpp  main.cpp
src/include/: bootos_manager.h  commander.h  common.h  config_reader.h  heartbeat.h  logger.h
