# Author: chengenbao 
# Date: 2013-09-02

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(BOOTOS)

SET (TARGET_NAME "bootos")
INCLUDE_DIRECTORIES(src/include)
SET (CMAKE_LIBRARY_PATH "lib")
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})

# Find the library
FIND_LIBRARY(
	CURL_LIB
	NAMES curllib
	PATHS ${CMAKE_LIBRARY_PATH} 
)

FIND_LIBRARY(
	XML_LIB
	NAMES libxml2
	PATHS ${CMAKE_LIBRARY_PATH} 
)

FIND_LIBRARY(
	ICONV_LIB
	NAMES iconv
	PATHS ${CMAKE_LIBRARY_PATH} 
)

FIND_LIBRARY(
	PTHREAD_LIB
	NAMES pthreadVC2
	PATHS ${CMAKE_LIBRARY_PATH} 
)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CURL_LIB} ${XML_LIB} ${ICONV_LIB} ${PTHREAD_LIB}) 
