# Author: chengenbao 
# Date: 2013-09-02

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(BOOTOS)

SET (TARGET_NAME "bootos")
INCLUDE_DIRECTORIES(src/include)
SET (CMAKE_LIBRARY_PATH "lib")
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

SET (CURL_LIB_NAME "curl")
SET (XML_LIB_NAME "xml2")
IF (WIN32)
    SET (PTHREAD_LIB_NAME "pthreadVC2")
    SET (JSON_LIB_NAME "libjson")
ELSE()
    SET (PTHREAD_LIB_NAME "pthread")
    SET (JSON_LIB_NAME "json")
ENDIF()
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})


# Find the library
FIND_LIBRARY(
	CURL_LIB
	NAMES ${CURL_LIB_NAME}
	PATHS ${CMAKE_LIBRARY_PATH} 
)

FIND_LIBRARY(
	XML_LIB
	NAMES ${XML_LIB_NAME}
	PATHS ${CMAKE_LIBRARY_PATH} 
)

IF (WIN32) 
    FIND_LIBRARY(
	    ICONV_LIB
	    NAMES iconv
	    PATHS ${CMAKE_LIBRARY_PATH} 
    )
ENDIF(WIN32)

FIND_LIBRARY(
	PTHREAD_LIB
	NAMES ${PTHREAD_LIB_NAME}
	PATHS ${CMAKE_LIBRARY_PATH} 
)

FIND_LIBRARY(
	JSON_LIB
	NAMES ${JSON_LIB_NAME}
	PATHS ${CMAKE_LIBRARY_PATH} 
)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CURL_LIB} ${XML_LIB} ${ICONV_LIB} ${PTHREAD_LIB} ${JSON_LIB}) 
